Fixes for treatment list too light

--- a/src/app/modules/emergency-register/components/emergency-record/emergency-record.component.scss
+++ b/src/app/modules/emergency-register/components/emergency-record/emergency-record.component.scss
@@ -136,6 +136,7 @@ $standard-width: 183px;
     height: auto;
     width: auto;
     display: flex;
+    cursor: pointer;
 }
 
 .comment-box{
