--- a/src/app/modules/treatment-list/components/treatment-list/treatment-list.component.scss
+++ b/src/app/modules/treatment-list/components/treatment-list/treatment-list.component.scss
@@ -16,6 +16,15 @@
       -webkit-print-color-adjust: exact;
       color-adjust: exact;
     }
+
+    th {
+      color:black;
+    }
+
+    legend {
+      color:black;
+    }
+
   }
 
 .complete{
